// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedHome renders correctly 1`] = `
<body>
  <div>
    <div>
      <div
        class="sc-EHOje kgEXVB"
      >
        <div
          class="sc-bZQynM cUURHD"
        >
          <div
            class="logo-div"
          >
            <div
              class="sc-bwzfXH fgQGql"
            >
              <img
                alt="Lambda School"
                src="lambda-logo.png"
              />
            </div>
          </div>
          <div
            class="sc-gzVnrw bOTotm"
          >
            <h1
              class="ant-typography siteTitle"
            >
              Lambda Door
            </h1>
            <div
              class="ant-typography"
            >
              The one-stop portal for Lambda graduates looking for company information in the quest for a job.  
              <a
                title="Learn more"
              >
                <span>
                  Learn more
                </span>
              </a>
            </div>
            <a
              href="https://slack.com/oauth/authorize?scope=identity.basic,identity.email,identity.team,identity.avatar&client_id=154966377728.878377460261&redirect_uri=http://localhost:3000/dashboard"
            >
              <img
                alt="Sign in with Slack"
                height="40"
                src="https://platform.slack-edge.com/img/sign_in_with_slack.png"
                srcset="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x"
                width="172"
              />
            </a>
          </div>
          <div
            class="ant-typography tag-paragraph"
            style="color: white;"
          >
            Built by Lambda students, for Lambda students.
          </div>
        </div>
      </div>
      <div
        class="sc-htpNat dZxUZh"
      >
        <div
          class="sc-bxivhb egdKxB"
        >
          <div
            class="heading"
          >
            <h2>
              Features
            </h2>
          </div>
          <div
            class="sc-ifAKCX hBrEpu"
          >
            <p
              class="left-outer"
            >
              <i
                aria-label="icon: slack-circle"
                class="anticon anticon-slack-circle icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="slack-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zM361.5 580.2c0 27.8-22.5 50.4-50.3 50.4a50.35 50.35 0 0 1-50.3-50.4c0-27.8 22.5-50.4 50.3-50.4h50.3v50.4zm134 134.4c0 27.8-22.5 50.4-50.3 50.4-27.8 0-50.3-22.6-50.3-50.4V580.2c0-27.8 22.5-50.4 50.3-50.4a50.35 50.35 0 0 1 50.3 50.4v134.4zm-50.2-218.4h-134c-27.8 0-50.3-22.6-50.3-50.4 0-27.8 22.5-50.4 50.3-50.4h134c27.8 0 50.3 22.6 50.3 50.4-.1 27.9-22.6 50.4-50.3 50.4zm0-134.4c-13.3 0-26.1-5.3-35.6-14.8S395 324.8 395 311.4c0-27.8 22.5-50.4 50.3-50.4 27.8 0 50.3 22.6 50.3 50.4v50.4h-50.3zm83.7-50.4c0-27.8 22.5-50.4 50.3-50.4 27.8 0 50.3 22.6 50.3 50.4v134.4c0 27.8-22.5 50.4-50.3 50.4-27.8 0-50.3-22.6-50.3-50.4V311.4zM579.3 765c-27.8 0-50.3-22.6-50.3-50.4v-50.4h50.3c27.8 0 50.3 22.6 50.3 50.4 0 27.8-22.5 50.4-50.3 50.4zm134-134.4h-134c-13.3 0-26.1-5.3-35.6-14.8S529 593.6 529 580.2c0-27.8 22.5-50.4 50.3-50.4h134c27.8 0 50.3 22.6 50.3 50.4 0 27.8-22.5 50.4-50.3 50.4zm0-134.4H663v-50.4c0-27.8 22.5-50.4 50.3-50.4s50.3 22.6 50.3 50.4c0 27.8-22.5 50.4-50.3 50.4z"
                  />
                </svg>
              </i>
              No need to sign up: Lambda students have automatic access. Just sign in via Slack.
            </p>
            <p
              class="left-center"
            >
              <i
                aria-label="icon: edit"
                class="anticon anticon-edit icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="edit"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32zm-622.3-84c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 0 0 0-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 0 0 9.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9z"
                  />
                </svg>
              </i>
              Leave company reviews, salary reviews and interview reviews, publicly or anonymously.
            </p>
            <p
              class="right-center"
            >
              <i
                aria-label="icon: info-circle"
                class="anticon anticon-info-circle icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="info-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 0 1 0-96 48.01 48.01 0 0 1 0 96z"
                  />
                </svg>
              </i>
              Access up to date information about companies in your area or around the world.
            </p>
            <p
              class="right-outer"
            >
              <i
                aria-label="icon: mail"
                class="anticon anticon-mail icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="mail"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zm-80.8 108.9L531.7 514.4c-7.8 6.1-18.7 6.1-26.5 0L189.6 268.9A7.2 7.2 0 0 1 194 256h648.8a7.2 7.2 0 0 1 4.4 12.9z"
                  />
                </svg>
              </i>
              Email referrals: ask questions at the click of a button about the companies you're interested in.
            </p>
          </div>
          <a
            class="back-link"
          >
            Go back  
            <i
              aria-label="icon: up-circle"
              class="anticon anticon-up-circle"
              style="font-size: 22px; color: rgb(187, 19, 51);"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="up-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm178 555h-46.9c-10.2 0-19.9-4.9-25.9-13.2L512 460.4 406.8 605.8c-6 8.3-15.6 13.2-25.9 13.2H334c-6.5 0-10.3-7.4-6.5-12.7l178-246c3.2-4.4 9.7-4.4 12.9 0l178 246c3.9 5.3.1 12.7-6.4 12.7z"
                />
              </svg>
            </i>
          </a>
        </div>
      </div>
      <div
        class="sc-bdVaJa kpDyBP"
      >
        <div
          class="tagline"
        >
          Built by Lambda students, for Lambda students.
        </div>
        <div
          class="copy-right"
        >
           © 2020 LambdaDoor
        </div>
        <div
          class="social-handle"
        >
          <a
            class="twitter"
            href="https://twitter.com/LambdaSchool"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-twitter fa-w-16 fa-2x "
              data-icon="twitter"
              data-prefix="fab"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
                fill="currentColor"
              />
            </svg>
          </a>
          <a
            class="facebook"
            href="https://www.facebook.com/LambdaSchoolOnline/"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-facebook fa-w-16 fa-2x "
              data-icon="facebook"
              data-prefix="fab"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"
                fill="currentColor"
              />
            </svg>
          </a>
          <a
            class="linkdIn"
            href="https://www.linkedin.com/school/lambdaschool/"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-linkedin fa-w-14 fa-2x "
              data-icon="linkedin"
              data-prefix="fab"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                fill="currentColor"
              />
            </svg>
          </a>
          <a
            class="webpage"
            href="https://lambdaschool.com/"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-globe fa-w-16 fa-2x "
              data-icon="globe"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 496 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z"
                fill="currentColor"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Home Displays a snapshot for the home page with it's image information 1`] = `
<div>
  <div>
    <div
      class="sc-EHOje kgEXVB"
    >
      <div
        class="sc-bZQynM cUURHD"
      >
        <div
          class="logo-div"
        >
          <div
            class="sc-bwzfXH fgQGql"
          >
            <img
              alt="Lambda School"
              src="lambda-logo.png"
            />
          </div>
        </div>
        <div
          class="sc-gzVnrw bOTotm"
        >
          <h1
            class="ant-typography siteTitle"
          >
            Lambda Door
          </h1>
          <div
            class="ant-typography"
          >
            The one-stop portal for Lambda graduates looking for company information in the quest for a job.  
            <a
              title="Learn more"
            >
              <span>
                Learn more
              </span>
            </a>
          </div>
          <a
            href="https://slack.com/oauth/authorize?scope=identity.basic,identity.email,identity.team,identity.avatar&client_id=154966377728.878377460261&redirect_uri=http://localhost:3000/dashboard"
          >
            <img
              alt="Sign in with Slack"
              height="40"
              src="https://platform.slack-edge.com/img/sign_in_with_slack.png"
              srcset="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x"
              width="172"
            />
          </a>
        </div>
        <div
          class="ant-typography tag-paragraph"
          style="color: white;"
        >
          Built by Lambda students, for Lambda students.
        </div>
      </div>
    </div>
    <div
      class="sc-htpNat dZxUZh"
    >
      <div
        class="sc-bxivhb egdKxB"
      >
        <div
          class="heading"
        >
          <h2>
            Features
          </h2>
        </div>
        <div
          class="sc-ifAKCX hBrEpu"
        >
          <p
            class="left-outer"
          >
            <i
              aria-label="icon: slack-circle"
              class="anticon anticon-slack-circle icon"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="slack-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zM361.5 580.2c0 27.8-22.5 50.4-50.3 50.4a50.35 50.35 0 0 1-50.3-50.4c0-27.8 22.5-50.4 50.3-50.4h50.3v50.4zm134 134.4c0 27.8-22.5 50.4-50.3 50.4-27.8 0-50.3-22.6-50.3-50.4V580.2c0-27.8 22.5-50.4 50.3-50.4a50.35 50.35 0 0 1 50.3 50.4v134.4zm-50.2-218.4h-134c-27.8 0-50.3-22.6-50.3-50.4 0-27.8 22.5-50.4 50.3-50.4h134c27.8 0 50.3 22.6 50.3 50.4-.1 27.9-22.6 50.4-50.3 50.4zm0-134.4c-13.3 0-26.1-5.3-35.6-14.8S395 324.8 395 311.4c0-27.8 22.5-50.4 50.3-50.4 27.8 0 50.3 22.6 50.3 50.4v50.4h-50.3zm83.7-50.4c0-27.8 22.5-50.4 50.3-50.4 27.8 0 50.3 22.6 50.3 50.4v134.4c0 27.8-22.5 50.4-50.3 50.4-27.8 0-50.3-22.6-50.3-50.4V311.4zM579.3 765c-27.8 0-50.3-22.6-50.3-50.4v-50.4h50.3c27.8 0 50.3 22.6 50.3 50.4 0 27.8-22.5 50.4-50.3 50.4zm134-134.4h-134c-13.3 0-26.1-5.3-35.6-14.8S529 593.6 529 580.2c0-27.8 22.5-50.4 50.3-50.4h134c27.8 0 50.3 22.6 50.3 50.4 0 27.8-22.5 50.4-50.3 50.4zm0-134.4H663v-50.4c0-27.8 22.5-50.4 50.3-50.4s50.3 22.6 50.3 50.4c0 27.8-22.5 50.4-50.3 50.4z"
                />
              </svg>
            </i>
            No need to sign up: Lambda students have automatic access. Just sign in via Slack.
          </p>
          <p
            class="left-center"
          >
            <i
              aria-label="icon: edit"
              class="anticon anticon-edit icon"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="edit"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32zm-622.3-84c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 0 0 0-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 0 0 9.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9z"
                />
              </svg>
            </i>
            Leave company reviews, salary reviews and interview reviews, publicly or anonymously.
          </p>
          <p
            class="right-center"
          >
            <i
              aria-label="icon: info-circle"
              class="anticon anticon-info-circle icon"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="info-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 0 1 0-96 48.01 48.01 0 0 1 0 96z"
                />
              </svg>
            </i>
            Access up to date information about companies in your area or around the world.
          </p>
          <p
            class="right-outer"
          >
            <i
              aria-label="icon: mail"
              class="anticon anticon-mail icon"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="mail"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zm-80.8 108.9L531.7 514.4c-7.8 6.1-18.7 6.1-26.5 0L189.6 268.9A7.2 7.2 0 0 1 194 256h648.8a7.2 7.2 0 0 1 4.4 12.9z"
                />
              </svg>
            </i>
            Email referrals: ask questions at the click of a button about the companies you're interested in.
          </p>
        </div>
        <a
          class="back-link"
        >
          Go back  
          <i
            aria-label="icon: up-circle"
            class="anticon anticon-up-circle"
            style="font-size: 22px; color: rgb(187, 19, 51);"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="up-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm178 555h-46.9c-10.2 0-19.9-4.9-25.9-13.2L512 460.4 406.8 605.8c-6 8.3-15.6 13.2-25.9 13.2H334c-6.5 0-10.3-7.4-6.5-12.7l178-246c3.2-4.4 9.7-4.4 12.9 0l178 246c3.9 5.3.1 12.7-6.4 12.7z"
              />
            </svg>
          </i>
        </a>
      </div>
    </div>
    <div
      class="sc-bdVaJa kpDyBP"
    >
      <div
        class="tagline"
      >
        Built by Lambda students, for Lambda students.
      </div>
      <div
        class="copy-right"
      >
         © 2020 LambdaDoor
      </div>
      <div
        class="social-handle"
      >
        <a
          class="twitter"
          href="https://twitter.com/LambdaSchool"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-twitter fa-w-16 fa-2x "
            data-icon="twitter"
            data-prefix="fab"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
              fill="currentColor"
            />
          </svg>
        </a>
        <a
          class="facebook"
          href="https://www.facebook.com/LambdaSchoolOnline/"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-facebook fa-w-16 fa-2x "
            data-icon="facebook"
            data-prefix="fab"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"
              fill="currentColor"
            />
          </svg>
        </a>
        <a
          class="linkdIn"
          href="https://www.linkedin.com/school/lambdaschool/"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-linkedin fa-w-14 fa-2x "
            data-icon="linkedin"
            data-prefix="fab"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
              fill="currentColor"
            />
          </svg>
        </a>
        <a
          class="webpage"
          href="https://lambdaschool.com/"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-globe fa-w-16 fa-2x "
            data-icon="globe"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 496 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Home Displays a snapshot for the home page with it's image information 2`] = `
<DocumentFragment>
  <div>
    <div
      class="sc-EHOje kgEXVB"
    >
      <div
        class="sc-bZQynM cUURHD"
      >
        <div
          class="logo-div"
        >
          <div
            class="sc-bwzfXH fgQGql"
          >
            <img
              alt="Lambda School"
              src="lambda-logo.png"
            />
          </div>
        </div>
        <div
          class="sc-gzVnrw bOTotm"
        >
          <h1
            class="ant-typography siteTitle"
          >
            Lambda Door
          </h1>
          <div
            class="ant-typography"
          >
            The one-stop portal for Lambda graduates looking for company information in the quest for a job.  
            <a
              title="Learn more"
            >
              <span>
                Learn more
              </span>
            </a>
          </div>
          <a
            href="https://slack.com/oauth/authorize?scope=identity.basic,identity.email,identity.team,identity.avatar&client_id=154966377728.878377460261&redirect_uri=http://localhost:3000/dashboard"
          >
            <img
              alt="Sign in with Slack"
              height="40"
              src="https://platform.slack-edge.com/img/sign_in_with_slack.png"
              srcset="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x"
              width="172"
            />
          </a>
        </div>
        <div
          class="ant-typography tag-paragraph"
          style="color: white;"
        >
          Built by Lambda students, for Lambda students.
        </div>
      </div>
    </div>
    <div
      class="sc-htpNat dZxUZh"
    >
      <div
        class="sc-bxivhb egdKxB"
      >
        <div
          class="heading"
        >
          <h2>
            Features
          </h2>
        </div>
        <div
          class="sc-ifAKCX hBrEpu"
        >
          <p
            class="left-outer"
          >
            <i
              aria-label="icon: slack-circle"
              class="anticon anticon-slack-circle icon"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="slack-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zM361.5 580.2c0 27.8-22.5 50.4-50.3 50.4a50.35 50.35 0 0 1-50.3-50.4c0-27.8 22.5-50.4 50.3-50.4h50.3v50.4zm134 134.4c0 27.8-22.5 50.4-50.3 50.4-27.8 0-50.3-22.6-50.3-50.4V580.2c0-27.8 22.5-50.4 50.3-50.4a50.35 50.35 0 0 1 50.3 50.4v134.4zm-50.2-218.4h-134c-27.8 0-50.3-22.6-50.3-50.4 0-27.8 22.5-50.4 50.3-50.4h134c27.8 0 50.3 22.6 50.3 50.4-.1 27.9-22.6 50.4-50.3 50.4zm0-134.4c-13.3 0-26.1-5.3-35.6-14.8S395 324.8 395 311.4c0-27.8 22.5-50.4 50.3-50.4 27.8 0 50.3 22.6 50.3 50.4v50.4h-50.3zm83.7-50.4c0-27.8 22.5-50.4 50.3-50.4 27.8 0 50.3 22.6 50.3 50.4v134.4c0 27.8-22.5 50.4-50.3 50.4-27.8 0-50.3-22.6-50.3-50.4V311.4zM579.3 765c-27.8 0-50.3-22.6-50.3-50.4v-50.4h50.3c27.8 0 50.3 22.6 50.3 50.4 0 27.8-22.5 50.4-50.3 50.4zm134-134.4h-134c-13.3 0-26.1-5.3-35.6-14.8S529 593.6 529 580.2c0-27.8 22.5-50.4 50.3-50.4h134c27.8 0 50.3 22.6 50.3 50.4 0 27.8-22.5 50.4-50.3 50.4zm0-134.4H663v-50.4c0-27.8 22.5-50.4 50.3-50.4s50.3 22.6 50.3 50.4c0 27.8-22.5 50.4-50.3 50.4z"
                />
              </svg>
            </i>
            No need to sign up: Lambda students have automatic access. Just sign in via Slack.
          </p>
          <p
            class="left-center"
          >
            <i
              aria-label="icon: edit"
              class="anticon anticon-edit icon"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="edit"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32zm-622.3-84c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 0 0 0-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 0 0 9.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9z"
                />
              </svg>
            </i>
            Leave company reviews, salary reviews and interview reviews, publicly or anonymously.
          </p>
          <p
            class="right-center"
          >
            <i
              aria-label="icon: info-circle"
              class="anticon anticon-info-circle icon"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="info-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 0 1 0-96 48.01 48.01 0 0 1 0 96z"
                />
              </svg>
            </i>
            Access up to date information about companies in your area or around the world.
          </p>
          <p
            class="right-outer"
          >
            <i
              aria-label="icon: mail"
              class="anticon anticon-mail icon"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="mail"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zm-80.8 108.9L531.7 514.4c-7.8 6.1-18.7 6.1-26.5 0L189.6 268.9A7.2 7.2 0 0 1 194 256h648.8a7.2 7.2 0 0 1 4.4 12.9z"
                />
              </svg>
            </i>
            Email referrals: ask questions at the click of a button about the companies you're interested in.
          </p>
        </div>
        <a
          class="back-link"
        >
          Go back  
          <i
            aria-label="icon: up-circle"
            class="anticon anticon-up-circle"
            style="font-size: 22px; color: rgb(187, 19, 51);"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="up-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm178 555h-46.9c-10.2 0-19.9-4.9-25.9-13.2L512 460.4 406.8 605.8c-6 8.3-15.6 13.2-25.9 13.2H334c-6.5 0-10.3-7.4-6.5-12.7l178-246c3.2-4.4 9.7-4.4 12.9 0l178 246c3.9 5.3.1 12.7-6.4 12.7z"
              />
            </svg>
          </i>
        </a>
      </div>
    </div>
    <div
      class="sc-bdVaJa kpDyBP"
    >
      <div
        class="tagline"
      >
        Built by Lambda students, for Lambda students.
      </div>
      <div
        class="copy-right"
      >
         © 2020 LambdaDoor
      </div>
      <div
        class="social-handle"
      >
        <a
          class="twitter"
          href="https://twitter.com/LambdaSchool"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-twitter fa-w-16 fa-2x "
            data-icon="twitter"
            data-prefix="fab"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
              fill="currentColor"
            />
          </svg>
        </a>
        <a
          class="facebook"
          href="https://www.facebook.com/LambdaSchoolOnline/"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-facebook fa-w-16 fa-2x "
            data-icon="facebook"
            data-prefix="fab"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"
              fill="currentColor"
            />
          </svg>
        </a>
        <a
          class="linkdIn"
          href="https://www.linkedin.com/school/lambdaschool/"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-linkedin fa-w-14 fa-2x "
            data-icon="linkedin"
            data-prefix="fab"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
              fill="currentColor"
            />
          </svg>
        </a>
        <a
          class="webpage"
          href="https://lambdaschool.com/"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-globe fa-w-16 fa-2x "
            data-icon="globe"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 496 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home renders correctly 1`] = `
<body>
  <div>
    <div>
      <div
        class="sc-EHOje kgEXVB"
      >
        <div
          class="sc-bZQynM cUURHD"
        >
          <div
            class="logo-div"
          >
            <div
              class="sc-bwzfXH fgQGql"
            >
              <img
                alt="Lambda School"
                src="lambda-logo.png"
              />
            </div>
          </div>
          <div
            class="sc-gzVnrw bOTotm"
          >
            <h1
              class="ant-typography siteTitle"
            >
              Lambda Door
            </h1>
            <div
              class="ant-typography"
            >
              The one-stop portal for Lambda graduates looking for company information in the quest for a job.  
              <a
                title="Learn more"
              >
                <span>
                  Learn more
                </span>
              </a>
            </div>
            <a
              href="https://slack.com/oauth/authorize?scope=identity.basic,identity.email,identity.team,identity.avatar&client_id=154966377728.878377460261&redirect_uri=http://localhost:3000/dashboard"
            >
              <img
                alt="Sign in with Slack"
                height="40"
                src="https://platform.slack-edge.com/img/sign_in_with_slack.png"
                srcset="https://platform.slack-edge.com/img/sign_in_with_slack.png 1x, https://platform.slack-edge.com/img/sign_in_with_slack@2x.png 2x"
                width="172"
              />
            </a>
          </div>
          <div
            class="ant-typography tag-paragraph"
            style="color: white;"
          >
            Built by Lambda students, for Lambda students.
          </div>
        </div>
      </div>
      <div
        class="sc-htpNat dZxUZh"
      >
        <div
          class="sc-bxivhb egdKxB"
        >
          <div
            class="heading"
          >
            <h2>
              Features
            </h2>
          </div>
          <div
            class="sc-ifAKCX hBrEpu"
          >
            <p
              class="left-outer"
            >
              <i
                aria-label="icon: slack-circle"
                class="anticon anticon-slack-circle icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="slack-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zM361.5 580.2c0 27.8-22.5 50.4-50.3 50.4a50.35 50.35 0 0 1-50.3-50.4c0-27.8 22.5-50.4 50.3-50.4h50.3v50.4zm134 134.4c0 27.8-22.5 50.4-50.3 50.4-27.8 0-50.3-22.6-50.3-50.4V580.2c0-27.8 22.5-50.4 50.3-50.4a50.35 50.35 0 0 1 50.3 50.4v134.4zm-50.2-218.4h-134c-27.8 0-50.3-22.6-50.3-50.4 0-27.8 22.5-50.4 50.3-50.4h134c27.8 0 50.3 22.6 50.3 50.4-.1 27.9-22.6 50.4-50.3 50.4zm0-134.4c-13.3 0-26.1-5.3-35.6-14.8S395 324.8 395 311.4c0-27.8 22.5-50.4 50.3-50.4 27.8 0 50.3 22.6 50.3 50.4v50.4h-50.3zm83.7-50.4c0-27.8 22.5-50.4 50.3-50.4 27.8 0 50.3 22.6 50.3 50.4v134.4c0 27.8-22.5 50.4-50.3 50.4-27.8 0-50.3-22.6-50.3-50.4V311.4zM579.3 765c-27.8 0-50.3-22.6-50.3-50.4v-50.4h50.3c27.8 0 50.3 22.6 50.3 50.4 0 27.8-22.5 50.4-50.3 50.4zm134-134.4h-134c-13.3 0-26.1-5.3-35.6-14.8S529 593.6 529 580.2c0-27.8 22.5-50.4 50.3-50.4h134c27.8 0 50.3 22.6 50.3 50.4 0 27.8-22.5 50.4-50.3 50.4zm0-134.4H663v-50.4c0-27.8 22.5-50.4 50.3-50.4s50.3 22.6 50.3 50.4c0 27.8-22.5 50.4-50.3 50.4z"
                  />
                </svg>
              </i>
              No need to sign up: Lambda students have automatic access. Just sign in via Slack.
            </p>
            <p
              class="left-center"
            >
              <i
                aria-label="icon: edit"
                class="anticon anticon-edit icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="edit"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32zm-622.3-84c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 0 0 0-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 0 0 9.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9z"
                  />
                </svg>
              </i>
              Leave company reviews, salary reviews and interview reviews, publicly or anonymously.
            </p>
            <p
              class="right-center"
            >
              <i
                aria-label="icon: info-circle"
                class="anticon anticon-info-circle icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="info-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 0 1 0-96 48.01 48.01 0 0 1 0 96z"
                  />
                </svg>
              </i>
              Access up to date information about companies in your area or around the world.
            </p>
            <p
              class="right-outer"
            >
              <i
                aria-label="icon: mail"
                class="anticon anticon-mail icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="mail"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zm-80.8 108.9L531.7 514.4c-7.8 6.1-18.7 6.1-26.5 0L189.6 268.9A7.2 7.2 0 0 1 194 256h648.8a7.2 7.2 0 0 1 4.4 12.9z"
                  />
                </svg>
              </i>
              Email referrals: ask questions at the click of a button about the companies you're interested in.
            </p>
          </div>
          <a
            class="back-link"
          >
            Go back  
            <i
              aria-label="icon: up-circle"
              class="anticon anticon-up-circle"
              style="font-size: 22px; color: rgb(187, 19, 51);"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="up-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm178 555h-46.9c-10.2 0-19.9-4.9-25.9-13.2L512 460.4 406.8 605.8c-6 8.3-15.6 13.2-25.9 13.2H334c-6.5 0-10.3-7.4-6.5-12.7l178-246c3.2-4.4 9.7-4.4 12.9 0l178 246c3.9 5.3.1 12.7-6.4 12.7z"
                />
              </svg>
            </i>
          </a>
        </div>
      </div>
      <div
        class="sc-bdVaJa kpDyBP"
      >
        <div
          class="tagline"
        >
          Built by Lambda students, for Lambda students.
        </div>
        <div
          class="copy-right"
        >
           © 2020 LambdaDoor
        </div>
        <div
          class="social-handle"
        >
          <a
            class="twitter"
            href="https://twitter.com/LambdaSchool"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-twitter fa-w-16 fa-2x "
              data-icon="twitter"
              data-prefix="fab"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
                fill="currentColor"
              />
            </svg>
          </a>
          <a
            class="facebook"
            href="https://www.facebook.com/LambdaSchoolOnline/"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-facebook fa-w-16 fa-2x "
              data-icon="facebook"
              data-prefix="fab"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"
                fill="currentColor"
              />
            </svg>
          </a>
          <a
            class="linkdIn"
            href="https://www.linkedin.com/school/lambdaschool/"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-linkedin fa-w-14 fa-2x "
              data-icon="linkedin"
              data-prefix="fab"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
                fill="currentColor"
              />
            </svg>
          </a>
          <a
            class="webpage"
            href="https://lambdaschool.com/"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-globe fa-w-16 fa-2x "
              data-icon="globe"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 496 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z"
                fill="currentColor"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
</body>
`;
